# comelit-vip

./: .gitignore  LICENSE  README.md  pyproject.toml  secrets.example.json
.github/workflows/: ci.yml  release.yml
comelit/: __init__.py  _paths.py  api.py  auth.py  cli.py  credentials.py  g711.py  intercom.py  provision.py  viper.py  web.py
examples/: basic_video.py  full_duplex.py  listen_audio.py  listen_rings.py  open_door.py  probe_audio.py  record_clip.py  show_config.py  stream_video.py  talk.py
tests/: test_cli.py  test_credentials.py  test_intercom.py  test_paths.py  test_viper.py  test_web.py
