[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comelit-vip"
dynamic = ["version"]
description = "Python client for Comelit ViP door intercoms (door, rings, video, two-way audio) over the LAN"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "ttmx", email = "git@tteles.dev" }]
keywords = ["comelit", "vip", "intercom", "doorbell", "sip", "rtp", "home-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
# Only needed for `comelit talk` / sending arbitrary audio files to the door;
# decodes/resamples any input to 8 kHz mono. Receiving audio needs nothing extra.
talk = ["av>=10"]

[project.urls]
Homepage = "https://github.com/ttmx/comelit-vip"
Repository = "https://github.com/ttmx/comelit-vip"

[project.scripts]
comelit = "comelit.cli:main"

[tool.hatch.version]
path = "comelit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["comelit"]

[tool.hatch.build.targets.sdist]
include = ["comelit", "examples", "tests", "README.md", "LICENSE", "secrets.example.json"]
